# christian_okeme-SDK

./: .gitignore  LICENSE  README.md  design.md  pyproject.toml  requirements.txt
src/liblab_sdk_djbabs/api_resources/: api_requester.py  mixins.py
src/liblab_sdk_djbabs/api_resources/abstract/: domain.py
src/liblab_sdk_djbabs/rest/: __init__.py
src/liblab_sdk_djbabs/rest/movie/: __init__.py
src/liblab_sdk_djbabs/rest/quote/: __init__.py
tests/: test_api_requester.py  test_mixins.py  test_rest_client.py
